changed bash script to run python with -m, new telegram bot

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,14 @@ pandas
 numpy
 urllib3
 plotly
+pymongo
+requests
+simplejson
+spacy
+pyarrow 
+fastparquet
+mlflow
+scikit-learn
+pyTelegramBotAPI
+
+telepot
